[tool.poetry]
name = "quiz-backend"
version = "0.1.0"
description = "Quiz microservice backend"
authors = ["Timur Lidzhiev"]
license = "CC"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
pydantic = { extras = ["dotenv"], version = "^1.10.7" }
SQLAlchemy = "^2.0.9"
asyncio = "^3.4.3"
aiosqlite = "^0.19.0"
httpx = "^0.24.0"
uvicorn = "^0.22.0"
gunicorn = "^20.1.0"
alembic = "^1.11.1"
apscheduler = "^3.10.1"

[tool.poetry.dev-dependencies]
pytest = "^7.3.0"
pytest-asyncio = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    ".", "src",
]
asyncio_mode = "auto"
